--- a/src/components/spinner/spinner.css
+++ b/src/components/spinner/spinner.css
@@ -1,6 +1,6 @@
 .sk-chase {
-    width: 40px;
-    height: 40px;
+    width: 2rem;
+    height: 2rem;
     position: relative;
     animation: sk-chase 2.5s infinite linear both;
   }
