--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,10 +3,23 @@
 
 @custom-variant dark (&:where(.dark, .dark *));
 
-.swal2-container {
-  z-index: 1500 !important;
-  
+@layer utilities {
+  .animate-fadeIn {
+    animation: fadeIn 0.5s ease-out forwards;
+  }
+
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+      transform: translateY(-20px); /* Desplazar desde arriba */
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
 }
+
 :root {
 
   --radius: 0.625rem;
